<resources>
    <string name="app_name">Walmart</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="logo">logo</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address_required">Email Address (Required)</string>
    <string name="forgot_password"><a href="http://www.walmart.com/account/forgotpassword">Forgot Password?</a></string>
    <string name="create_an_account">Create an Account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="required">* Required</string>
    <string name="first_name">First Name *</string>
    <string name="last_name">Last Name*</string>
    <string name="last_name2">Last Name*</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address*</string>
    <string name="name">Name</string>
    <string name="welcome_hello_gmail_com">Welcome, hello@gmail.com</string>
    <string name="shop_by_categories">Shop by Categories</string>
    <string name="electronics">Electronics</string>
    <string name="clothing">Clothing</string>
    <string name="food">Food</string>
    <string name="beauty">Beauty</string>
    <string name="first_number">First Number</string>
    <string name="Multiply">*</string>
    <string name="textview">TextView</string>
    <string name="Divide">/</string>
    <string name="Minus">-</string>
    <string name="Plus">+</string>
    <string name="result">Result</string>
    <string name="second_number">Second Number</string>
</resources>